# ComfyUI-Model-Manager

./: .gitignore  .prettierrc  .prettierrc.json  README.md  __init__.py  config_loader.py  eslint.config.js  index.html  index.json  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  requirements.txt  tailwind.config.js  tsconfig.json  tsconfig.tsbuildinfo  vite-plugin-transform-imports.js  vite.config.ts
.github/ISSUE_TEMPLATE/: bug-report.yaml  feature-request.yaml
.github/workflows/: eslint.yml  format.yml  publish.yml  pylint.yml
py/: config.py  download.py  information.py  manager.py  searcher.py  services.py  socket.py  thread.py  upload.py  utils.py
src/: App.vue  i18n.ts  main.ts  style.css
src/components/: DialogCreateTask.vue  DialogDownload.vue  DialogDownloadSetting.vue  DialogExplorer.vue  DialogManager.vue  DialogModelCard.vue  DialogModelDetail.vue  DialogResizer.vue  DialogScanning.vue  DialogUpload.vue  FormWrapper.vue  GlobalDialogStack.vue  GlobalLoading.vue  GlobalToast.vue  ModelBaseInfo.vue  ModelCard.vue  ModelContent.vue  ModelDescription.vue  ModelMetadata.vue  ModelPreview.vue  PreviewVideo.vue  ResponseBreadcrumb.vue  ResponseDialog.vue  ResponseFileUpload.vue  ResponseImage.vue  ResponseInput.vue  ResponseScroll.vue  ResponseScrollArea.vue  ResponseSelect.vue  SettingApiKey.vue  SettingCardSize.vue
src/hooks/: config.ts  container.ts  dialog.ts  download.ts  explorer.ts  loading.ts  manager.ts  (+9 more)
web/: downshow.js  index-Bb8y1yPU.js  marked.js  model-manager.css  model-manager.js  primevue-C69Cyb4U.js  version.yaml
(+10 files in other folders)
