[project]
name = "comfyui-model-manager"
description = "Manage models: browsing, download and delete."
version = "2.0.1"
license = "LICENSE"

[project.urls]
Repository = "https://github.com/hayden-fr/ComfyUI-Model-Manager"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "hayden"
DisplayName = "ComfyUI-Model-Manager"
Icon = ""
