[project]
name = "comfyui-model-manager"
description = "Manage models: browsing, download and delete."
version = "2.1.2"
license = "LICENSE"
dependencies = ["markdownify"]

[project.urls]
Repository = "https://github.com/hayden-fr/ComfyUI-Model-Manager"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "hayden"
DisplayName = "ComfyUI-Model-Manager"
Icon = ""

[tool.black]
line-length = 160
